--- a/src/components/Login/Signin.css
+++ b/src/components/Login/Signin.css
@@ -1,18 +1,18 @@
-.title {
+h1{
     font-family: 'GetSchwifty-Regular';
-    font-size: 3rem;
-    color: rgb(127, 201, 31);  
-    margin-top: 100px;
-}  
+    color: rgb(127, 201, 31);
+}
 
-.btn {
+.button{
     background-color: rgb(127, 201, 31);
     color: white;
-    padding: 10px 20px;
+    padding: 0.5rem 1rem;
     border: none;
-    border-radius: 5px;
+    border-radius: 4px;
     cursor: pointer;
+    font-size: 1rem;
 }
-.btn:hover {
+
+.button:hover {
     background-color: rgb(100, 160, 25);
 }
